# BezierSurface

./: README.md  bezier.pyx  color_texture.py  control_points2.txt  data_structures.pxd  data_structures.pyx  light.py  main.py  normal_map.py  pyproject.toml  rasterize.pyx  rendering.py  rotation.pyx  setup.py  siema.py  triangulation.pyx
UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
bezier_surface_renderer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
compiled/: bezier.cp313-win_amd64.pyd  data_structures.cp313-win_amd64.pyd  rasterize.cp313-win_amd64.pyd  rotation.cp313-win_amd64.pyd  triangulation.cp313-win_amd64.pyd
cython_build/: bezier.c  data_structures.c  rasterize.c  rotation.c  triangulation.c
